--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -34,3 +34,15 @@
 #    name = "CV"
 #    url = "files/cv.pdf"
 #    weight = 70
+
+# [[main_right]]
+#   name = "Teaching"
+#   url = "courses"
+#   weight = 20
+
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+[[main_right]]
+   name = "CV"
+   url = ""
+   weight = 30
