--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,10 +35,10 @@
 #    url = "files/cv.pdf"
 #    weight = 70
 
-# [[main_right]]
-#   name = "Teaching"
-#   url = "courses"
-#   weight = 20
+[[main_right]]
+  name = "Teaching"
+  url = "courses"
+  weight = 20
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
